feat: Criando consulta separada para a busca do endereço pelo cep.
